Updated views, added xml export

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
     ],
     "require": {
         "alchemyai/alchemyapi_php":"*"
+	},
+	"autoload": {
+		"psr-0": {"Opencalais": "vendor/PHP-OpenCalais-master"}
 	}
 }
