--- a/conf/supervisor/tika-server.conf
+++ b/conf/supervisor/tika-server.conf
@@ -6,5 +6,5 @@ autorestart=true
 startretries=3
 stderr_logfile=/var/log/tika/tika-server.err.log
 stdout_logfile=/var/log/tika/tika-server.out.log
-user=www-data
+user=root
 environment=
